ecmascript/parser/tests/typescript-errors/type-only-export-specifier/missing-local/input.ts.stderr
error: Expected ident
 --> $DIR/tests/typescript-errors/type-only-export-specifier/missing-local/input.ts:1:22
  |
1 | export { type foo as }
  |                      ^

